# py-seas

./: .gitignore  Pesos_IBGE_R.R  README.md  generate_requirements.py  genhol_df.py  ibge_compare.py  main copy.py  main.py  pyproject.toml  requirements.txt
src/data/: holidays.py  pimpf.py
src/genhol/: genhol.py
src/model/: pimpf_sa.py  pimpf_sa_copy.py
src/py_seas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
