[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-seas"
version = "0.1.0"
description = "Seasonal adjustment using Genhol in R."
authors = [{ name = "Your Name", email = "lfpazevedo@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "ipykernel==6.29.5",
    "requests==2.32.3",
    "pandas==2.2.3",
    "rpy2==3.5.17",
    "python-dotenv==1.0.1",
    "xlrd==2.0.1",
    "matplotlib==3.9.3",
    "statsmodels==0.14.4",
]

[project.optional-dependencies]
dev = [
    "pytest==7.0.0"
]
